# FinRLM_pracitc_SRI_Spetsvuzavtomatika

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
app/: ui.py
src/finrlm/: config.py  rerank.py  search.py
src/finrlm/agent/: graph.py  tools.py
src/finrlm/index/: chunking.py  embed.py  store.py
src/finrlm/ingest/: clean.py  rss.py
src/finrlm/rag/: generate.py
src/finrlm/rlm/: recursive.py
