[project]
name = "finrlm"
version = "0.1.0"
description = "Агентная Q&A система по финансовым новостям: гибрид RAG + RLM"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "feedparser>=6.0.12",
    "flagembedding>=1.4.0",
    "langdetect>=1.0.9",
    "openai>=2.44.0",
    "qdrant-client>=1.18.0",
    "rlms",
    "streamlit>=1.40.0",
    "torch",
    "trafilatura>=2.1.0",
]

[tool.uv.sources]
rlms = { git = "https://github.com/alexzhang13/rlm.git" }
# torch считается только на CPU (BGE-M3 + reranker), GPU держит отдельный vLLM —
# берём CPU-сборку, это убирает ~5 ГБ CUDA-зависимостей из окружения и образа.
torch = { index = "pytorch-cpu" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
